// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`middlewares/simpleObject should initialize 1`] = `
Object {
  "state": Object {},
}
`;

exports[`middlewares/simpleObject should initialize with defaultData 1`] = `
Object {
  "state": "default",
}
`;

exports[`middlewares/simpleObject should reset state 1`] = `
Object {
  "action": Object {
    "type": "@trampss/RESET_TESTPREFIX",
  },
  "state": Object {},
}
`;

exports[`middlewares/simpleObject should set element [elm2] 1`] = `
Object {
  "action": Object {
    "payload": Object {
      "code": "elm2",
      "infos": "elm2",
      "some": "other",
    },
    "type": "@trampss/SET_TESTPREFIX",
  },
  "state": Object {
    "code": "elm2",
    "infos": "elm2",
    "some": "other",
  },
}
`;

exports[`middlewares/simpleObject should take defaultData param to populate data field 1`] = `
Object {
  "state": Object {
    "im": "default",
  },
}
`;

exports[`middlewares/simpleObject should take defaultData param to populate data field 2`] = `
Object {
  "action": Object {
    "type": "@trampss/RESET_TESTPREFIX",
  },
  "state": Object {
    "im": "default",
  },
}
`;

exports[`middlewares/simpleObject should update element 1`] = `
Object {
  "action": Object {
    "payload": Object {
      "modifi": "cation",
      "some": "other 2",
    },
    "type": "@trampss/UPDATE_TESTPREFIX",
  },
  "state": Object {
    "code": "elm",
    "infos": "elm",
    "modifi": "cation",
    "some": "other 2",
  },
}
`;
